	* Fixed issue 5952 (partial): Usability Issue with classes wrapped with <> in select lists
	* Fixed issue 5951: Disturbing behaviour of indent/outdent and TAB
	* Added feature 3708 (partial): support for <blockquote>
	* Fixed issue 5977: align="center" (right or left) not any more supported by W3C
	* Fixed issue 6837: Strange layout for header N except the first one (Safari)

2007-12-30  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Feature/bugfix: Fixing icons for Opera and adding new icons in default skin of htmlArea RTE and in t3skin/rtehtmlarea

2007-12-27	Dmitry Dulepov	<dmitry@typo3.org>

	* Fixed bug #7028: Implement CSH for flexforms

2007-12-26  Oliver Hader  <oh@inpublica.de>

	* (minor) Fixed bug #6651: IRRE - Button for creating new records disappeared on nested child records if a parent record reached the maxitems value
	* (tweak) Fixed bug #7038: EM - sql_free_result() on non-resources fails

2007-12-21  Oliver Hader  <oh@inpublica.de>

	* (minor) Fixed bug #6007: IRRE - Child records with image fields are not shown in m:n disposal
	* (minor) Fixed hanging recordset in t3lib_TCEmain::getSortNumber

2007-12-20	Thomas Hempel  <thomas@typo3-unleashed.net>

	* Added meta-subcategory "root" for adding deliverables to main categories.

2007-12-19	Thomas Hempel  <thomas@typo3-unleashed.net>

	* Feature request #6988: Return errors from performUpdateQueries (Thanks to Francois Suter)

2007-12-19  Ernesto Baschny <ernst@cron-it.de>

	* Feature request #3822, #5065: Make hardcoded (250000 bytes) max attachment size for mailform configurable: $TYPO3_CONF_VARS['FE']['formmailMaxAttachmentSize']

2007-12-17  Ingmar Schlecht  <ingmar@typo3.org>

	* Fixed bug #6996: Versioning in clickmenu was unavailable for non-admins due to a problem of an earlier bugfix #4160 (Thanks to Helmut Hummel for the correction)
	* Code cleanup: #6990 use prototype functions instead of own ones where possible in clickmenu (Thanks to Helmut Hummel)
